# poetryfastblog

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml  test.db
fastpoet/: crud.py  main.py  models.py  routers.py  schemas.py  sql_app.db
fastpoet/groups/: models.py  routers.py  schemas.py  service.py
fastpoet/posts/: models.py  routers.py  schemas.py  service.py  validators.py
fastpoet/posts/crud/: crud_post.py
fastpoet/settings/: database.py  models.py  security_config.py
fastpoet/users/: authentication.py  decorators.py  models.py  roles.py  routers.py  schemas.py  security.py  service.py  todo.txt
fastpoet/users/crud/: crud_authentication.py  crud_permissions.py  crud_user.py
fastpoet/users/routers/: authentications_router.py  permissions_router.py  users_router.py
fastpoet/users/schemas/: permission_schema.py  token_schema.py  user_schema.py
migrations/: env.py
migrations/versions/: 3a0fb727fd74_add_models_to_db.py  60852089d4e0_add_db.py  64a6c8e11ce0_add_column_lol.py  9fa95d90214e_add_new_field.py  bba7a1272ce6_new_miggration.py  bd7245d0c34c_create_tables.py  c5bb69ecab53_add_db.py  c80dc55bddde_new_miggration.py  e40b0eb43376_add_db.py  f74441efddee_del_column_lol.py
tests/: conftest.py  test_fastpoet.py  test_sql_app.py  test_users.py
