[tool.poetry]
name = "fastpoet"
version = "0.1.0"
description = ""
authors = ["Иван Алексеев <seevvia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.75.2"}
flake8 = "^4.0.1"
autoflake = "^1.4"
SQLAlchemy = "^1.4.36"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
fastapi = {extras = ["all"], version = "^0.75.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
